--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* ––––––––––––––––– Home Page ––––––––––––––––– */
+
+.headerHome {
+  position: relative;
+  text-align: center;
+  height: 300px;
+}
+
+.headerImgHome {
+  width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.headerHeadlineHome {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/* ––––––––––––––––– Detail Page ––––––––––––––––– */
+
+.headerDetail {
+  position: relative;
+  text-align: center;
+  height: 300px;
+}
+
+.headerTextDetail {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.headerImgDetail {
+  width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+
+/* ––––––––––––––––– New Entry Page ––––––––––––––––– */
+
+.mainNewEntry {
+  margin: 50px auto;
+}
+
+.mainHeadlineNewEntry {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  margin: 0 auto;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
